Code cleanups for Java 17.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>