@@ -22,7 +22,6 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.cometd.server.AbstractBayeuxClientServerTest;
 import org.cometd.server.ServerSessionImpl;
@@ -261,7 +260,7 @@ public class BrowserMappingTest extends AbstractBayeuxClientServerTest {
 
         HttpFields headers = response.getHeaders();
         String cookie = headers.get(HttpHeader.SET_COOKIE);
-        List<String> parts = Arrays.stream(cookie.split(";")).map(String::trim).collect(Collectors.toList());
+        List<String> parts = Arrays.stream(cookie.split(";")).map(String::trim).toList();
         boolean hasCookieName = false;
         for (String part : parts) {
             if (part.startsWith(cookieName + "=")) {
